added Silvino thesis and other references.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -1,5 +1,3 @@
-% Encoding: UTF-8
-
 @Article{Studer2012,
   author    = {E. Studer and J. Brinster and I. Tkatschenko and G. Mignot and D. Paladino and M. Andreani},
   journal   = {Nuclear Engineering and Design},
@@ -267,6 +265,7 @@ Model credibility can be established through verification and validation (V\&V) 
   title  = {{External} {Coupling} of {Computational} {Fluid} {Dynamics} {Modeling} of the {Density} {Evolution} {Inside} of the {Helium-3} {Enhanced} {Negative} {Reactivity} {Insertion} ({HENRI}) {System} with the {Monte-Carlo} {Neutronics} code {Serpent} 2},
   year   = {2021},
   file   = {:HENRI/9.13.2021._M.S._CLeingang_External Coupling of STARCCM+ and Serpent2.pdf:PDF},
+  url    = {https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/6m311w950},
 }
 
 @Book{TodreasKazimi,
@@ -291,6 +290,7 @@ Model credibility can be established through verification and validation (V\&V) 
   volume       = {123},
   file         = {:C\:/Users/warre/Documents/OSU/Conferences/StudentConf_2021/Cole_ANSWinter2020.pdf:PDF},
 }
+
 @InProceedings{CFDNureth,
   author    = {S. {Balderrama Prieto} and G. Mignot and W. Marcum and N. Woolstenhulme},
   booktitle = {18th International Topical Meeting on Nuclear Reactor Thermal Hydraulics (NURETH 2019)},
@@ -299,7 +299,9 @@ Model credibility can be established through verification and validation (V\&V) 
   address   = {Portland, OR},
   month     = {August},
   pages     = {2164-2176},
-}@Article{TREATPulse,
+}
+
+@Article{TREATPulse,
   author   = {John D. Bess and Nicolas E. Woolstenhulme and Cliff B. Davis and Louis M. Dusanter and Charles P. Folsom and James R. Parry and Tate H. Shorthill and Haihua Zhao},
   journal  = {Annals of Nuclear Energy},
   title    = {Narrowing transient testing pulse widths to enhance LWR RIA experiment design in the TREAT facility},
@@ -469,6 +471,46 @@ within the 5 ms. limit assuming an ultra-fast opening device.},
   year        = {2009},
   type        = {Standard},
   file        = {:VV/ASME V&V 40-2018.pdf:PDF},
+}
+
+@MastersThesis{Prieto2019,
+  author   = {Balderrama Prieto, Silvino},
+  school   = {Oregon State University},
+  title    = {{Computational} {Fluid} {Dynamics} {Modeling} of the {Density} {Evolution} {Inside} of the {Helium-3} {Enhanced} {Negative} {Reactivity} {Insertion} {(HENRI)} {System}},
+  year     = {2019},
+  abstract = {The testing of nuclear fuel under reactivity-initiated accident (RIA) conditions is paramount for the better understanding of the fuel's behavior during this transient accident events. The Transient Reactor Test (TREAT) facility is a nuclear reactor that will be capable of recreating the thermal-hydraulic and neutronic boundary conditions representative of RIA events for light water reactors (LWRs). However, one of the engineering challenges to perform such fuel tests is to increase the energy deposition on the fuel sample by reducing the current TREAT's pulse width of 89 down to 40 ms. Idaho National Laboratory (INL) proposed to clip the pulse by inserting helium-3, a strong neutron absorber, into an annular control rod using a gas injection system known as the Helium-3 Enhanced Negative Reactivity (HENRI) facility. The purpose of this study is to pave the path towards the development of a computational fluid dynamics (CFD) model capable of confidently simulate the density evolution inside of the HENRI facility using the commercial CFD software STAR-CCM+. The development of a CFD model is essential since existing instrumentation is unable to obtain a direct measurement of the helium density, and indirect methods are unable to measure it with high accuracy. For better analysis of the system's performance inside of the TREAT facility, the CFD model will be coupled with a reactor physics modeling software so a more representative analysis of the transient pulse of the TREAT can be obtained.},
+  file     = {:Z\:/Quality Facilities/3. Individual Workers/Austin Warren/THESIS/LitReview/LitReview/HENRI/BalderramaPrietoSilvino2019.pdf:PDF},
+  url      = {https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/w95056004},
+}
+
+@Software{Leingang2021,
+  author = {Cole Leingang},
+  title  = {CONSTELATION},
+  year   = {2021},
+}
+
+
+@Misc{,
+  howpublished = {\url{https://radiationcenter.oregonstate.edu/oregon-state-triga-reactor-0}},
+  note         = {Accessed: Jun 29, 2022},
+  title        = {Oregon State TRIGA Reactor},
+  school       = {Oregon State University Radiation Center},
+  url          = {https://radiationcenter.oregonstate.edu/oregon-state-triga-reactor-0},
+}
+
+@TechReport{WoolstenhulmeATF,
+  author      = {N. E. Woolstenhulme and J. D. Wiest},
+  institution = {Idaho National Laboratory},
+  title       = {{ATF} Transient Testing Pre-Conceptual Engineering Status Summary},
+  year        = {2013},
+}
+
+@Book{OECDRIA,
+  author    = {{Nuclear Energy Agency}},
+  publisher = {OECD},
+  title     = {Nuclear Fuel Behavior Under Reactivity-initiated Accident {(RIA)} conditions},
+  year      = {2010},
+  isbn      = {978-92-64-99113-2},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
