added new source from Cole's thesis about coupled validation

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -513,4 +513,27 @@ within the 5 ms. limit assuming an ultra-fast opening device.},
   isbn      = {978-92-64-99113-2},
 }
 
+@Book{Anderson2003,
+  author    = {John D. Anderson},
+  publisher = {McGraw-Hill},
+  title     = {{Modern} {Compressible} {Flow}: {With} {Historical} {Perspective}},
+  year      = {2003},
+  edition   = {Third},
+  isbn      = {978-0-07-242443-0},
+}
+
+@Article{Agung2013,
+  author   = {Alexander Agung and József Bánáti and Mathias Stålek and Christophe Demazière},
+  journal  = {Nuclear Engineering and Design},
+  title    = {Validation of {PARCS}/{RELAP5} coupled codes against a load rejection transient at the {Ringhals-3} {NPP}},
+  year     = {2013},
+  issn     = {0029-5493},
+  pages    = {31-44},
+  volume   = {257},
+  abstract = {This article gives an account of the development and validation of the PARCS/RELAP5 model of the Ringhals-3 unit against a load rejection transient, which occurred on November 28, 2010. The third unit of the Ringhals nuclear power plant comprises a 3-loop Westinghouse design pressurized water reactor on the Swedish West Coast. At first, the development of the PARCS and RELAP5 models are presented. On the neutronic side, a unique cross-section interface, allowing feeding PARCS with realistic data, was developed. The dependence of the material constants on history effects, burnup, and instantaneous conditions is accounted for, and the full heterogeneity of the core is thus taken into account. The reflectors are also explicitly represented. On the thermal-hydraulic side, all the 157 fuel assemblies are modeled individually in the code input. The model is furthermore able to handle possible asymmetrical conditions of the flow velocity and temperature fields between the loops. The coupling between the two codes is touched upon, with emphasis on the mapping between the hydrodynamic/heat structures and the neutronic nodes. Comparison between calculated and measured parameters demonstrates that the coupled model is able to correctly represent the steady-state conditions of the plant. The validation of the coupled model against measured transient plant data is then performed. It is demonstrated that the coupled model is able to catch the main features of the transient with a sufficient level of accuracy.},
+  doi      = {https://doi.org/10.1016/j.nucengdes.2012.12.023},
+  file     = {:VV/Agung_PARCS_RELAP5_2013.pdf:PDF},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0029549313000393},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
