added more sources from Cole

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -536,4 +536,34 @@ within the 5 ms. limit assuming an ultra-fast opening device.},
   url      = {https://www.sciencedirect.com/science/article/pii/S0029549313000393},
 }
 
+@Article{Rao2019,
+  author   = {Junjie Rao and Xiaotong Shang and Ganglin Yu and Kan Wang},
+  journal  = {Annals of Nuclear Energy},
+  title    = {Coupling RMC and CFD for simulation of transients in TREAT reactor},
+  year     = {2019},
+  issn     = {0306-4549},
+  pages    = {249-257},
+  volume   = {132},
+  abstract = {This paper introduces a transient-state coupling method using the Monte Carlo Code RMC (Reactor Monte Carlo Code) and the Computational Fluid Dynamic (CFD) code ANSYS FLUENT. RMC employs the Predictor-Corrector Quasi-Static (PCQS) method to solve space- and time-dependent neutron transport problems and uses the on-the-fly target motion sampling (TMS) for Doppler broadening. This method was performed for simulation of transients in the Transient Reactor Test Facility (TREAT). Time evolutions of power were reproduced and qualitative assessment of the model was performed by comparison with the measured power. This method successfully reproduced the experimental results of transients in TREAT reactor, and the deviation at peak power was less than 30%.},
+  doi      = {https://doi.org/10.1016/j.anucene.2019.04.039},
+  file     = {:VV/Rao_RMC_CFD_2019.pdf:PDF},
+  keywords = {Transient, Monte Carlo, CFD, Coupling, TREAT},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0306454919302233},
+}
+
+@Article{Henry2017,
+  author   = {R. Henry and I. Tiselj and L. Snoj},
+  journal  = {Annals of Nuclear Energy},
+  title    = {CFD/Monte-Carlo neutron transport coupling scheme, application to TRIGA reactor},
+  year     = {2017},
+  issn     = {0306-4549},
+  pages    = {36-47},
+  volume   = {110},
+  abstract = {A new computational model of the JSI TRIGA Mark II, coupling Monte Carlo neutron transport code TRIPOLI and fluid dynamics code CFX was built and verified with a set of new experimental data. A set of subroutines was developed to allow the communication between the Monte-Carlo transport code and CFD code. First, test of the coupling scheme is presented: for a given thermal power of the reactor, the coupled model numerically reproduced fuel temperature monitored during reactor operation and axial water temperature profile measured in the coolant channels. Then axial temperature profiles in the coolant channels were measured with a newly developed sensor during steady-state operation. Predictions of the coupled model are in expected agreement with experimental data recorded during reactor operations. Influence of the coupling has been investigated.},
+  doi      = {https://doi.org/10.1016/j.anucene.2017.06.018},
+  file     = {:VV/Henry_CFD_MC_TRIGA_2017.pdf:PDF},
+  keywords = {Triga, Monte-Carlo, CFD, Coupling, Temperature measurement},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0306454917301639},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
