added more references from Cole

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -566,4 +566,34 @@ within the 5 ms. limit assuming an ultra-fast opening device.},
   url      = {https://www.sciencedirect.com/science/article/pii/S0306454917301639},
 }
 
+@Article{Daeubler2015,
+  author   = {Miriam Daeubler and Aleksandar Ivanov and Bart L. Sjenitzer and Victor Sanchez and Robert Stieglitz and Rafael Macian-Juan},
+  journal  = {Annals of Nuclear Energy},
+  title    = {High-fidelity coupled Monte Carlo neutron transport and thermal-hydraulic simulations using Serpent 2/SUBCHANFLOW},
+  year     = {2015},
+  issn     = {0306-4549},
+  pages    = {352-375},
+  volume   = {83},
+  abstract = {Efforts to develop high-fidelity, in silico or ab initio, high performance multi-physics tools are undertaken by many groups due to the availability of relatively cheap, large-scale parallel computers. To this end, an internal coupling between the Monte Carlo reactor physics code Serpent 2 and the sub-channel code SUBCHANFLOW has been developed. The coupled code system is intended to serve as reference for deterministic reactor dynamics code developments in the future. It exploits the fact that Serpent was conceived as a lattice code for such deterministic tools. The coupling utilizes Serpent’s recently introduced universal multi-physics interface. With the multi-physics interface enabled, Serpent treats temperature dependence of nuclear data using the target motion sampling method. Since the target motion sampling methodology cannot be applied to thermal bound-atom scattering or unresolved resonances, a stochastic mixing fall back algorithm to enable the simulation of thermal reactors has been implemented. The developed coupled code is verified by code-to-code comparison with an external coupling of the Monte Carlo tool TRIPOLI4 and SUBCHANFLOW as well as the internally coupled code MCNP5/SUBCHANFLOW. Simulation results of all code systems were found to be in good agreement. Thereafter, the second exercise of the OECD/NEA and U.S. NRC PWR MOX/UO2 core transient benchmark is studied to demonstrate that Serpent 2/SUBCHANFLOW may be employed to analyze realistic, industry-like cases such as a full PWR core under hot full power conditions in a reasonable amount of time. The obtained simulation results are compared to known benchmark solutions and the numerical performance of Serpent 2/SUBCHANFLOW is analyzed to assess the feasibility of routine application. While Serpent 2/SUBCHANFLOW’s performance in terms of physics and numerical efficiency is found to be generally satisfactory, options to further improve the coupled tool concerning both aspects are discussed. Afterwards, first efforts to validate Serpent 2/SUBCHANFLOW using the hot zero power state of the cycle 1 of the BEAVRS benchmark are presented.},
+  doi      = {https://doi.org/10.1016/j.anucene.2015.03.040},
+  file     = {:VV/Daeubler_Serpent2_SUBCHANFLOW_2015.pdf:PDF},
+  keywords = {Serpent, SUBCHANFLOW, Internal coupling, Multi-physics, High-fidelity},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0306454915001747},
+}
+
+@Article{Sjenitzer2015,
+  author   = {Bart L. Sjenitzer and J. Eduard Hoogenboom and Javier {Jiménez Escalante} and Victor {Sanchez Espinoza}},
+  journal  = {Annals of Nuclear Energy},
+  title    = {Coupling of dynamic Monte Carlo with thermal-hydraulic feedback},
+  year     = {2015},
+  issn     = {0306-4549},
+  pages    = {27-39},
+  volume   = {76},
+  abstract = {Transient analysis of nuclear reactors is traditionally the domain of deterministic methods, even tough these methods are known to have limitations. With the development of dynamic Monte Carlo and the development of coupled-steady state Monte Carlo calculations the road has been paved to perform transient analysis of high power reactors using Monte Carlo. By this way, it is possible to take into account the thermal-hydraulic feedback, while the neutron transport is modelled in full detail. In this paper a new method is described, which can perform such stochastic analysis of a transient scenario.},
+  doi      = {https://doi.org/10.1016/j.anucene.2014.09.018},
+  file     = {:VV/Sjenitzer_MC_THfeedback_2015.pdf:PDF},
+  keywords = {Monte Carlo, Neutron transport, Coupled calculation, Feedback, Thermal-hydraulics},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0306454914004903},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
