added sodshock reference

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -596,4 +596,11 @@ within the 5 ms. limit assuming an ultra-fast opening device.},
   url      = {https://www.sciencedirect.com/science/article/pii/S0306454914004903},
 }
 
+@Misc{sodshock,
+  author = {Isaac Backus},
+  title  = {sodshock - Sod Shock Tube Calculator},
+  year   = {2021},
+  url    = {https://github.com/ibackus/sod-shocktube},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
