--- a/LitReview.bib
+++ b/LitReview.bib
@@ -603,4 +603,18 @@ within the 5 ms. limit assuming an ultra-fast opening device.},
   url    = {https://github.com/ibackus/sod-shocktube},
 }
 
+@Article{Rau2020,
+  author   = {Adam Rau and William J. Walters},
+  journal  = {Progress in Nuclear Energy},
+  title    = {Validation of coupled fission matrix – TRACE methods for thermal-hydraulic and control feedback on the Penn State Breazeale Reactor},
+  year     = {2020},
+  issn     = {0149-1970},
+  pages    = {103273},
+  volume   = {123},
+  abstract = {A new method for calculating power shape and critical control rod position is described and validated in view of increasing the fidelity of the Penn State Breazeale Reactor's (PSBR) fuel management code. Currently, the PSBR fuel management code is biased against experimental results and requires the use of empirical correction factors. This is likely due to a combination of assumptions, such as the control rods being fixed in the all-out position and the use of a uniform fuel temperature. The proposed method supplies this data using fission-matrix-based neutronics coupled with TRACE thermal-hydraulics. The fission-matrix-based neutronics relies on Serpent for precalculation of fission matrices. Steady-state fuel temperature distributions, power shapes, and control rod positions are calculated through iteration between TRACE and fission matrix calculations. Validation is performed on the coupled TRACE-fission matrix model for powers ranging from 50 kW to 1 MW. For these cases, the RMS average error with experimental data is 12.7 K for instrumented element fuel temperature and $0.07 for reactivity change. Agreement is generally within estimated experimental uncertainty. The effect of various modeling parameters, such as the fuel-cladding gap heat transfer coefficient and the exact radial location of the instrumented element thermocouple, are shown. Finally, the impact of this increased modeling fidelity on the depletion calculation is estimated. In the future, this validation should be repeated on later core loadings of the PSBR where more detailed experimental data is available. Comparison between the current PSBR fuel management code and the proposed model should also be made.},
+  doi      = {https://doi.org/10.1016/j.pnucene.2020.103273},
+  keywords = {Fission-matrix, TRIGA, TRACE, Multi-physics, Serpent},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0149197020300329},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
