added serpent 2 reference

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -671,4 +671,20 @@ Model credibility can be established through verification and validation (V\&V) 
   school       = {{American} {Society} of {Mechanical} {Engineers}},
 }
 
+@Article{Leppanen2015,
+  author   = {Jaakko Lepp\"{a}nen and Maria Pusa and Tuomas Viitanen and Ville Valtavirta and Toni Kaltiaisenaho},
+  journal  = {Annals of Nuclear Energy},
+  title    = {The {Serpent} {Monte} {Carlo} code: Status, development and applications in 2013},
+  year     = {2015},
+  issn     = {0306-4549},
+  note     = {Joint International Conference on Supercomputing in Nuclear Applications and Monte Carlo 2013, SNA + MC 2013. Pluri- and Trans-disciplinarity, Towards New Modeling and Numerical Simulation Paradigms},
+  pages    = {142-150},
+  volume   = {82},
+  abstract = {The Serpent Monte Carlo reactor physics burnup calculation code has been developed at VTT Technical Research Centre of Finland since 2004, and is currently used in over 100 universities and research organizations around the world. This paper presents the brief history of the project, together with the currently available methods and capabilities and plans for future work. Typical user applications are introduced in the form of a summary review on Serpent-related publications over the past few years.},
+  doi      = {https://doi.org/10.1016/j.anucene.2014.08.024},
+  file     = {:Serpent/Leppanen_Serpent_2015.pdf:PDF},
+  keywords = {Serpent, Monte Carlo, Reactor physics, Homogenization, Burnup calculation},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0306454914004095},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
