added Serpent and serpentTools references

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -687,4 +687,18 @@ Model credibility can be established through verification and validation (V\&V) 
   url      = {https://www.sciencedirect.com/science/article/pii/S0306454914004095},
 }
 
+@Article{Johnson2020,
+  author    = {Andrew E. Johnson and Dan Kotlyar and Stefano Terlizzi and Gavin Ridley},
+  journal   = {Nuclear Science and Engineering},
+  title     = {serpentTools: A Python Package for Expediting Analysis with Serpent},
+  year      = {2020},
+  number    = {11},
+  pages     = {1016-1024},
+  volume    = {194},
+  doi       = {10.1080/00295639.2020.1723992},
+  eprint    = {https://doi.org/10.1080/00295639.2020.1723992},
+  publisher = {Taylor & Francis},
+  url       = {https://doi.org/10.1080/00295639.2020.1723992},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
