added references for lit review figs

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -701,4 +701,57 @@ Model credibility can be established through verification and validation (V\&V) 
   url       = {https://doi.org/10.1080/00295639.2020.1723992},
 }
 
+ 
+@Article{Bess2015,
+  author       = {Bess, John Darrell and DeHart, Mark David},
+  title        = {Baseline Assessment of {TREAT} for Modeling and Analysis Needs},
+  year         = {2015},
+  month        = {10},
+  abstractnote = {TREAT is an air-cooled, graphite moderated, thermal, heterogeneous test facility designed to evaluate reactor fuels and structural materials under conditions simulating various types of nuclear excursions and transient undercooling situations that could occur in a nuclear reactor. After 21 years in a standby mode, TREAT is being re-activated to revive transient testing capabilities. Given the time elapsed and the concurrent loss of operating experience, current generation and advanced computational methods are being applied to begin TREAT modeling and simulation prior to renewed at-power operations. Such methods have limited value in predicting the behavior of TREAT without proper validation. Hence, the U.S. DOE has developed a number of programs to support development of benchmarks for both critical and transient operations. Extensive effort has been expended at INL to collect detailed descriptions, drawings and specifications for all aspects of TREAT, and to resolve conflicting data found through this process. This report provides a collection of these data, with updated figures that are significantly more readable than historic drawings and illustrations, compositions, and dimensions based on the best available sources. This document is not nor should it be considered to be a benchmark report. Rather, it is intended to provide one-stop shopping, to the extent possible, for other work that seeks to prepare detailed, accurate models of the core and its components. Given the nature of the variety of historic documents available and the loss of institutional memory, the only completely accurate database of TREAT data is TREAT itself. Unfortunately, disassembly of TREAT for inspection, assay, and measurement is highly unlikely. Hence the data provided herein is intended serve as a best-estimate substitute.},
+  doi          = {10.2172/1240047},
+  file         = {:TREAT/Bess2015.pdf:PDF},
+  place        = {United States},
+  url          = {https://www.osti.gov/biblio/1240047},
+}
+
+@Book{Freund1958,
+  author    = {Freund, GA and Iskenderian, HP and Okrent, D},
+  publisher = {US Government Printing Office},
+  title     = {TREAT, a pulsed graphite-moderated reactor for kinetic experiments},
+  year      = {1958},
+}
+
+@Article{Wright2015,
+  author    = {Wright, Arthur E},
+  title     = {Transient Testing of Nuclear Fuels in {TREAT}: An Overview},
+  year      = {2015},
+  publisher = {Argonne National Lab.(ANL), Argonne, IL (United States)},
+  url       = {https://www.osti.gov/biblio/1351970},
+}
+
+@Article{Volpi1982,
+  author    = {A. De Volpi and C. L. Fink and G. E. Marsh and E. A. Rhodes and G. S. Stanford},
+  journal   = {Nuclear Technology},
+  title     = {Fast-Neutron Hodoscope at TREAT: Methods for Quantitative Determination of Fuel Dispersal},
+  year      = {1982},
+  number    = {1},
+  pages     = {141-188},
+  volume    = {56},
+  doi       = {10.13182/NT82-1},
+  eprint    = {https://doi.org/10.13182/NT82-1},
+  publisher = {Taylor & Francis},
+  url       = {https://doi.org/10.13182/NT82-1},
+}
+
+@Article{Chichester2015,
+  author    = {Chichester, DL and Watson, SM and Johnson, JT},
+  journal   = {Transactions},
+  title     = {The {TREAT} fast-neutron hodoscope and plans for restoring it to operation},
+  year      = {2015},
+  number    = {1},
+  pages     = {377--380},
+  volume    = {112},
+  publisher = {American Nuclear Society},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
