fixed errors in auto generated bibtex

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -730,7 +730,7 @@ Model credibility can be established through verification and validation (V\&V) 
 }
 
 @Article{Volpi1982,
-  author    = {A. De Volpi and C. L. Fink and G. E. Marsh and E. A. Rhodes and G. S. Stanford},
+  author    = {A. {De Volpi} and C. L. Fink and G. E. Marsh and E. A. Rhodes and G. S. Stanford},
   journal   = {Nuclear Technology},
   title     = {Fast-Neutron Hodoscope at TREAT: Methods for Quantitative Determination of Fuel Dispersal},
   year      = {1982},
